# estrutura-de-dados-espaciais

./: .gitignore  README.md
anotacoes/2_heaps/maxheap/: CMakeLists.txt  compile.sh  heap.hpp  main.cpp
anotacoes/3_indice_espacial/: CMakeLists.txt  compile.sh  kdtree
anotacoes/3_indice_espacial/src/: coordinate.hpp  kdtree.cpp  kdtree.hpp  main.cpp  rectangle.hpp
aulas/: README.md
aulas/1_complexidade_computacional/: README.md
aulas/1_complexidade_computacional/analise/4_merge_sort/: CMakeLists.txt  compile.sh  main.cpp  mergesort  sort.cpp
aulas/1_complexidade_computacional/analise/5_merge_sort_inplace/: CMakeLists.txt  compile.sh  main.cpp  mergesortinplace  sort.cpp  sort.hpp
aulas/2_estrutura_de_dados_elementares/deck/: CMakeLists.txt  compile.sh  deck  deck.hpp  main.cpp
aulas/2_estrutura_de_dados_elementares/lista/: CMakeLists.txt  list  list.hpp  main.cpp
aulas/2_estrutura_de_dados_elementares/pilha/: infix.cpp  main.cpp
exercicios/lista_1/exercicio_1/: CMakeLists.txt  compile.sh  exe1  main.cpp  stack.cpp  stack.hpp
exercicios/lista_1/exercicio_10/: compile.sh  geometry.hpp  kdtree.hpp  main.cpp
exercicios/lista_1/exercicio_2/: CMakeLists.txt  compile.sh  doc.md  exe2  list  list.hpp  main.cpp
exercicios/lista_1/exercicio_3/: CMakeLists.txt  compile.sh  infix.cpp  infix.hpp  main.cpp  stack
exercicios/lista_1/exercicio_4/: CMakeLists.txt  compile.sh  deck  deck.hpp  doc.md  main.cpp
exercicios/lista_1/exercicio_5/: CMakeLists.txt  compile.sh  exe5  main.cpp  mtree.hpp
exercicios/lista_1/exercicio_9/: CMakeLists.txt  alturas.csv  analise.py  compile.sh  main.cpp
(+32 files in other folders)
